--- a/style.css
+++ b/style.css
@@ -158,3 +158,86 @@ footer {
 iframe {
     margin-top: 32px;
 }
+
+/* MEDIA QUERIES */ 
+
+@media (max-width: 1000px) {
+    main img {
+        width: 260px;
+        height: 260px;
+    }
+        
+    main img:hover {
+        width: 280px;
+        height: 280px;
+    }
+}
+
+@media (max-width: 888px) {
+    
+    main {
+        height: 769px;
+    }
+
+    main img {
+        width: 290px;
+        height: 290px;
+        margin: 20px 10px 5px 0;
+    }
+
+    main img:hover {
+        width: 300px;
+        height: 300px;
+    }
+}
+
+@media (max-width: 882px) {
+    .container-section {
+        flex-direction: column;
+        align-items: center;
+    }
+}
+
+@media (max-width: 670px) {
+    
+    main {
+        height: 1150px;
+    }
+
+    main img {
+        width: 330px;
+        height: 330px;
+        margin: 20px 10px 5px 0;
+    }
+
+    main img:hover {
+        width: 320px;
+        height: 320px;
+    }
+
+    .container-footer {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .container-footer p {
+        margin-top: 20px;
+    }
+
+    iframe {
+        width: 250px;
+        height: 200px;
+    }
+  
+}
+
+@media (max-width: 600px) {
+    .menu {
+        display: none;
+    }
+
+    #logo {
+        justify-content: center;
+    }
+}
+
