--- a/style.css
+++ b/style.css
@@ -196,6 +196,14 @@ iframe {
         flex-direction: column;
         align-items: center;
     }
+
+    .contato ul {
+        margin-bottom: 20px;
+     }
+    .contato ul li {
+       top: 0;
+       left: 0;
+    }
 }
 
 @media (max-width: 670px) {
